# compiler-for-vm

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
docs/: ir.md
src/: graph.cpp  graph.h  inst.cpp  inst.h  ir_constructor.h  marker.h  opcodes.h  pass_manager.h
src/optimizations/: checks_elimination.cpp  checks_elimination.h  constant_folding.cpp  constant_folding.h  gcm.cpp  gcm.h  inlining.cpp  inlining.h  linear_scan.cpp  linear_scan.h  peepholes.cpp  peepholes.h
src/optimizations/analysis/: analysis.cpp  analysis.h  domtree.cpp  domtree.h  linear_order.cpp  linear_order.h  liveness_analyzer.cpp  liveness_analyzer.h  loop_analysis.cpp  loop_analysis.h  rpo.cpp  rpo.h
src/utils/: utils.cpp  utils.h
tests/: CMakeLists.txt  analysis_tests.cpp  checks_elimination_tests.cpp  graph_comparator.cpp  graph_comparator.h  graph_tests.cpp  inlining_tests.cpp  peepholes_tests.cpp
